--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,23 +1,24 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
 /client/node_modules
 /node_modules
 /.pnp
 .pnp.js
 
-#testing
+# testing
 /coverage
 
-#production
+# production
 /build
 
-#misc
+# misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
